# agent-cuts-backend

./: .gitignore  API_ROUTES.md  README.md  __init__.py  agent.py  agent_cuts_runner.py  demo_agent.py  example_usage.py  main.py  main_agent.py  main_old.py  pyproject.toml  requirements.txt  sessions.json  test_individual_agents.py  test_invalid.txt  test_package.py  test_sequential_debug.py  test_transcript.json  video_segment.py
agent-cuts/: __init__.py  agent.py
agent-cuts/sub_agents/copywriter_agent/: agent.py  prompt.py
agent_cuts/: agent.py
agents/: transcription_agent.py
output/: ranking_agent_response.json  ranking_response.json  results_20250614_022032.json  results_20250614_030301.json  segmentation_response.json  test_result_test.json  transcript_agent_response.json
ranking_agent/: agent.py
segmentation_agent/: agent.py
segments/kind-cobra-8115/: segmentation_result.json
segments/wise-panther-2378/: segmentation_result.json
subagents/: __init__.py  transcription.py
tests/: README.md  test_agent_cuts.py  test_comprehensive.py  test_quick_upload.py
tools/: __init__.py  weather_time.py
transcription_agent/: __init__.py
transcription_agent/core/: __init__.py  adk_agent.py  engine.py
transcription_agent/utils/: __init__.py  groq_client.py  output_formatter.py  sentence_processor.py
uploads/brave-tornado-9421/: transcription_output.json
utils/: __init__.py  audio_processing.py  groq_client.py  output_formatter.py  phrase_generator.py  sentence_processor.py  session_manager.py
video_segmentation_agent/: agent.py
(+30 files in other folders)
