[project]
name = "agent-cuts-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Mian Maaz Ullah Khan",email = "115078151+mmaazkhanhere@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "uvicorn (>=0.34.2,<0.35.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "google-adk (>=1.0.0,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
